# terraform-secure-express-example

./: .gitignore  .terraform.lock.hcl  TERRAFORM_SETUP.md  auth0.tf  main.tf  outputs.tf  providers.tf  secrets-manager.tf  terraform.tfvars.example  variables.tf
scripts/: pyproject.toml
