[project]
name = "terraform-secure-express-example"
version = "0.1.0"
description = ""
authors = [
    {name = "math-eqs",email = "mathangi.krishnamurthy_c@equipmentshare.com"}
]
requires-python = ">=3.11"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)"
]

[dependency-groups]
dev = [
    "boto3 (>=1.42.25,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
